--- a/build.gradle
+++ b/build.gradle
@@ -49,5 +49,8 @@ dependencies {
 
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
+
+    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
+
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
