--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    
+    //test 에서 dummy data 생성용
+    testCompile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
 
     //log
     implementation 'ch.qos.logback:logback-core:1.2.3'
@@ -32,7 +35,6 @@ dependencies {
 
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation group: 'org.json', name: 'json', version: '20200518'
 
 
@@ -45,12 +47,13 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
     implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
+
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
 
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
-
     implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
+
 
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
