--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
 
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
 
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
