--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,12 @@ repositories {
 }
 
 dependencies {
-    
-    //test 에서 dummy data 생성용
-    testCompile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
+
 
     //log
     implementation 'ch.qos.logback:logback-core:1.2.3'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'ch.qos.logback:logback-access:1.2.3'
-
 
     //spring boot
     implementation group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: '2.3.2.RELEASE', ext: 'pom'
@@ -28,11 +25,9 @@ dependencies {
     //jdbc
     implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version: '19.3.0.0'
 
-
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.10'
     //connection pool
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
-
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'org.json', name: 'json', version: '20200518'
@@ -50,11 +45,13 @@ dependencies {
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
 
+    implementation 'com.seomse.commons:seomse-commons:1.1.5'
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
     implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
+
 
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
