--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
 
+    testImplementation 'org.apache.poi:poi-ooxml:3.16'
+
+
 
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
