--- a/build.gradle
+++ b/build.gradle
@@ -17,20 +17,17 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'ch.qos.logback:logback-access:1.2.3'
 
-    //spring boot
-    implementation group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: '2.3.2.RELEASE', ext: 'pom'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.2.RELEASE'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.2.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.0'
 
     //jdbc
     implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version: '19.3.0.0'
 
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.10'
     //connection pool
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    implementation group: 'org.json', name: 'json', version: '20200518'
+    implementation group: 'org.json', name: 'json', version: '20201115'
 
 
     implementation 'commons-beanutils:commons-beanutils:1.9.3'
@@ -48,13 +45,11 @@ dependencies {
     implementation 'com.seomse.commons:seomse-commons:1.2.2'
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
-    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
+//    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
 
     testImplementation 'org.apache.poi:poi-ooxml:3.16'
-
-
 
     implementation fileTree (dir: 'dependencies', include: ['/**/*.jar'])
 }
