--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.seomse.commons:seomse-commons:1.2.3'
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
+    testImplementation 'com.seomse.crawling:seomse-crawling:0.7.7'
 //    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
