--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'org.json', name: 'json', version: '20201115'
 
+    implementation group: 'org.moara.yido', name: 'ner', version: '0.1.0'
+
 
     implementation 'commons-beanutils:commons-beanutils:1.9.3'
     implementation 'commons-dbcp:commons-dbcp:1.4'
