--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     implementation group: 'org.json', name: 'json', version: '20210307'
 
-    implementation group: 'org.moara.yido', name: 'ner', version: '0.1.0'
+    implementation 'org.moara.yido:ner:0.1.0'
 
 
     implementation 'commons-beanutils:commons-beanutils:1.9.3'
