--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,15 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'ch.qos.logback:logback-access:1.2.3'
 
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.1'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.2'
 
     //jdbc
-    implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version: '19.3.0.0'
+    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '21.1.0.0'
+//    implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version: '19.3.0.0'
 
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.10'
     //connection pool
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     implementation group: 'org.json', name: 'json', version: '20210307'
@@ -42,13 +43,13 @@ dependencies {
 
     implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
-    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.3'
 
     implementation 'com.seomse.commons:seomse-commons:1.2.5'
     implementation 'com.seomse.cypto:seomse-cypto:0.1.0'
 
 
-    testImplementation 'com.seomse.crawling:seomse-crawling:0.8.1'
+    testImplementation 'com.seomse.crawling:seomse-crawling:0.8.2'
 //    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.7.1'
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
